test/types/file/fwriteIntFailed.good
fwriteIntFailed.chpl:2: error: Bad file descriptor: not writeable in file.writer with path "fwriteIntFailed.txt"
